crates/vize_atelier_ssr/tests/snapshots/ssr_snapshot__element__empty_div.snap
---
source: crates/vize_atelier_ssr/tests/ssr_snapshot.rs
assertion_line: 96
expression: "get_compiled_string(\"<div></div>\")"
---
function ssrRender(_ctx, _push, _parent, _attrs) {
  _push(`<div${_ssrRenderAttrs(_attrs)}><div></div></div>`)
}
