crates/vize_atelier_ssr/tests/snapshots/ssr_snapshot__element__nested_elements.snap
---
source: crates/vize_atelier_ssr/tests/ssr_snapshot.rs
expression: "get_compiled_string(\"<span></span><span></span>\")"
---
function ssrRender(_ctx, _push, _parent, _attrs) {
  _push(`<div${_ssrRenderAttrs(_attrs)}><span></span><span></span></div>`)
}
