crates/vize_atelier_ssr/tests/snapshots/ssr_snapshot__element__should_ignore_v_on.snap
---
source: crates/vize_atelier_ssr/tests/ssr_snapshot.rs
expression: "get_compiled_string(r#\"<div id=\"foo\" @click=\"bar\"></div>\"#)"
---
function ssrRender(_ctx, _push, _parent, _attrs) {
  _push(`<div${_ssrRenderAttrs(_attrs)}><div id="foo"></div></div>`)
}
