crates/vize_atelier_ssr/tests/snapshots/ssr_snapshot__element__static_attrs.snap
---
source: crates/vize_atelier_ssr/tests/ssr_snapshot.rs
expression: "get_compiled_string(r#\"<div id=\"foo\" class=\"bar\"></div>\"#)"
---
function ssrRender(_ctx, _push, _parent, _attrs) {
  _push(`<div${_ssrRenderAttrs(_attrs)}><div id="foo" class="bar"></div></div>`)
}
