crates/vize_atelier_ssr/tests/snapshots/ssr_snapshot__element__v_bind_boolean.snap
---
source: crates/vize_atelier_ssr/tests/ssr_snapshot.rs
expression: "get_compiled_string(r#\"<input type=\"checkbox\" :checked=\"checked\">\"#)"
---
function ssrRender(_ctx, _push, _parent, _attrs) {
  _push(`<div${_ssrRenderAttrs(_attrs)}><input type="checkbox"${_ssrRenderAttr("checked", _ctx.checked)}></div>`)
}
