crates/vize_atelier_ssr/tests/snapshots/ssr_snapshot__element__v_bind_non_boolean.snap
---
source: crates/vize_atelier_ssr/tests/ssr_snapshot.rs
expression: "get_compiled_string(r#\"<div :id=\"id\" class=\"bar\"></div>\"#)"
---
function ssrRender(_ctx, _push, _parent, _attrs) {
  _push(`<div${_ssrRenderAttrs(_attrs)}><div${_ssrRenderAttr("id", _ctx.id)} class="bar"></div></div>`)
}
